# Software_renderer

./: .gitignore  CMakeLists.txt  DEVELOPER_GUIDE.md  Makefile  README.md  Short_Build_Instructions.md  SoftwareRenderer_README.md  USER_GUIDE.md  cube_solid.tga  cube_wireframe.tga  head_fixed.tga  head_inverted.tga  head_shaded.tga  head_wireframe.tga  head_wireframe_fixed.tga
examples/: checker_16.tga  checker_32.tga  gradient.tga
include/: Application.h  CommandLineParser.h  IModelLoader.h  IRenderStrategy.h  ITextureLoader.h  Logger.h  Model.h  ModelLoaderFactory.h  OBJModelLoader.h  Renderer.h  TGATextureLoader.h  TestTexture.h  Texture.h  TextureLoaderFactory.h  Vertex.h  datatypes.h  model.hpp
scripts/: build_windows.bat  run_examples.bat  setup_and_build.bat  simple_build_msvc.bat
src/: Application.cpp  CommandLineParser.cpp  Model.cpp  ModelLoaderFactory.cpp  OBJModelLoader.cpp  Renderer.cpp  TGATextureLoader.cpp  TestTexture.cpp  Texture.cpp  TextureLoaderFactory.cpp  main.cpp  model.cpp
